refactor: member builder and config